[package]
name = "mangohudlib"
edition.workspace = true
license.workspace = true
# rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# non-local crates
egui.workspace = true
rgb.workspace = true
hex.workspace = true
