[package]
name = "mangohudlib"
edition.workspace = true
license.workspace = true
# rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# non-local crates
egui.workspace = true
eyre.workspace = true
fs-err.workspace = true
rgb.workspace = true
hex.workspace = true
configparser = { version = "3.0", features = ["indexmap"] }
strum = { version = "0.24", features = ["derive"] }
