[package]
name = "mangoverlay"
edition.workspace = true
license.workspace = true
# rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local crates
mangohudlib.workspace = true

# non-local crates
egui.workspace = true
eframe = "0.22.0"
egui-modal = "0.2.3"
